@@ -1,5 +1,16 @@
 2019-05-15  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	Use G_DECLARE_FINAL_TYPE to declare LibBalsaAddressBookOsmo
+
+	Make the structure private; no need for getters and setters.
+
+	Adopt ab_osmo as the identifier.
+
+	* libbalsa/address-book-osmo.c (osmo_read_addresses):
+	* libbalsa/address-book-osmo.h:
+
+2019-05-15  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	Use G_DECLARE_FINAL_TYPE to declare LibBalsaAddressBookLdif
 
 	Make the structure private; no need for getters and setters.
